@@ -19,6 +19,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #22435: Fix a file descriptor leak when SocketServer bind fails.
+
 - Issue #21580: Now Tkinter correctly handles binary "data" and "maskdata"
   configure options of tkinter.PhotoImage.
 
